--- a/index.html
+++ b/index.html
@@ -11,7 +11,39 @@
 </head>
 
 <body>
-  <h1>Hello, world!</h1>
+
+
+
+
+
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid mx-5">
+      <a class="navbar-brand h1 fw-bolder" href="#">Abacus Convention Center</a>
+      <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link a-hvr fw-bold" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link a-hvr fw-bold" href="#">Packages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link a-hvr fw-bold" href="#">Offers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link a-hvr fw-bold" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link a-hvr fw-bold" href="#">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link a-hvr fw-bold" href="#">Subscribe</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
 
 
 
@@ -83,11 +115,11 @@
 
 
   <div class="card mb-3 second-part mx-auto margin-top no-border">
-    <div class="row g-0">
+    <div class="row g-5">
       <div class="col-md-7">
         <img src="images/wedding.png" class="img rounded-start w-100" alt="...">
       </div>
-      <div class="col-md-5 my-auto">
+      <div class="col-md-5 d-flex align-items-center">
         <div class="card-body">
           <h1 class="card-title fw-bolder">Every moment is Precious</h1>
           <p class="card-text fw-bold text-secondary">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -114,7 +146,7 @@
         <div class="card-body">
           <h5 class="card-title fw-bold h1 fff-0">$300</h5>
           <h5 class="card-title fw-bold h4 fff-0">Business Fair</h5>
-          <p class="card-text fff-0">For most businesses event
+          <p class="card-text fff-1">For most businesses event
             like book fair, craft fair.
             <br><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-check-circle-fill" viewBox="0 0 16 16">
@@ -153,7 +185,7 @@
         <div class="card-body">
           <h5 class="card-title fw-bold h1 fff-0">$500</h5>
           <h5 class="card-title fw-bold h4 fff-0">Wedding Basic</h5>
-          <p class="card-text fff-0">For weddings with basic plan
+          <p class="card-text fff-1">For weddings with basic plan
             and limited item.
             <br><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-check-circle-fill" viewBox="0 0 16 16">
@@ -192,7 +224,7 @@
         <div class="card-body">
           <h5 class="card-title fw-bold h1 fff-0">$800</h5>
           <h5 class="card-title fw-bold h4 fff-0">Wedding Plus</h5>
-          <p class="card-text fff-0">For most weddings with premium plans.
+          <p class="card-text fff-1">For most weddings with premium plans.
             <br><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-check-circle-fill" viewBox="0 0 16 16">
               <path
@@ -230,7 +262,7 @@
         <div class="card-body">
           <h5 class="card-title fw-bold h1 fff-0">$1200</h5>
           <h5 class="card-title fw-bold h4 fff-0">Corporate Event</h5>
-          <p class="card-text fff-0">For most corporate business
+          <p class="card-text fff-1">For most corporate business
             events.
             <br><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-check-circle-fill" viewBox="0 0 16 16">
